# Diode

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
resources/scenes/: Backup.json  test.json
resources/shaders/: bitmapFrag.glsl  checkerFrag.glsl  checkerVert.glsl  frag.glsl  textFrag.glsl  textVert.glsl  uiFrag.glsl  uiVert.glsl  vert.glsl
resources/textures/: pallete.aseprite
resources/textures/aesprite/: ship.aseprite  testSprite.aseprite  tiles.aseprite
resources/textures/icons/: Icons.aseprite
src/: Ambience.cpp  Ambience.h  Audio.h  Bitmap.cpp  Bitmap.h  Bomb.cpp  Bomb.h  Bomber.cpp  Bomber.h  Breaker.cpp  Breaker.h  Bullet.cpp  Bullet.h  BulletHell.cpp  BulletHell.h  Camera.cpp  Camera.h  Charger.cpp  Charger.h  Checkpoint.cpp  Checkpoint.h  Collidable.h  Color.h  Coords.h  DashTarget.cpp  DashTarget.h  Debug.h  Destructable.h  Drone.cpp  Drone.h  Dropper.cpp  Dropper.h  Editor.cpp  Editor.h  EnttInf.h  File.h  FrameBuffer.cpp  FrameBuffer.h  GUI.h  Game.h  (+67 more)
